================
Current Change Log
================

Version 1.1.0
PRE-RELEASE TODO:
- Add volume support
- Regression testing suite
- Check for impacts of Roon Server 1.3 (Build 233)

Done
- Complete rewrite of UI - now supports both Portrait and Landscape view
- Added new theme based on the dominant color of the cover art
- Added controls for Loop, Shuffle, and Auto Radio
- Added a check to see if the extension is enabled
- Switching zones is now much more responsive
- Tweaked jquery.simplemarquee.js to use "span" instead of "div" due to problems with CSS layouts

================
Release History
================

Version 1.0.1
- Resolved bug that could result in repeated listings in Zone Listings
- Changed all icons to utilize SVGs from Material Design Icons (https://materialdesignicons.com/)
- Dramactically reduced the number of times the icons were being called and redrawn
- Changed default theme to "Cover Dark"
- Set default icon theme to "Circles"
- Added configuration option to select icons between icons with or without circles
- Miscellaneous aesthetic changes

Version 1.0.0
- Initial Release