@@ -6,6 +6,9 @@
   "author": "Mike Plugge",
   "license": "MIT",
   "dependencies": {
+    "command-line-args": "^4.0.6",
+    "command-line-usage": "^4.0.0",
+    "config": "^1.26.1",
     "express": "4.x",
     "jquery": "^3.2.1",
     "js-cookie": "^2.1.4",
